--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mapbox-gl": "^2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.0.19",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
